--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     while providing resources to employable single adults that 
     are homeless.  Food, shelter, showers, and counseling.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="normalize.css">
+    <link rel="stylesheet" href="ship_styles.css">
 </head>
 <body>
     <header></header>
