add article from home page of original site

--- a/index.html
+++ b/index.html
@@ -15,7 +15,58 @@
 <body>
     <header></header>
     <nav></nav>
-    <main></main>
+    <main>
+        <article>
+            <h3>
+                What is SHIP?</h3>
+            <p>
+                We are an ecumenical venture composed of 18 local churches that provide food, 
+                shelter, shower, and counseling for to up 8 homeless employable single adults. 
+                Guests are carefully screened and can be provided up to 60 days to find employment.
+                 Upon finding employment they are held to rigorous budget and savings 
+                requirements with the intention to save as much money as possible within a 
+                4-5 month period. Guests are held accountable for all of their time, spending, 
+                and actions. Guests are then transitioned into affordable housing. SHIP does 
+                not accept guests with disabilities. Guests must be employable.</p>
+            <h3>
+                Who are we?</h3>
+            <p>
+                Although the majority of our volunteers are from local churches, there is no 
+                religious affiliation nor are there any religious requirements for our guests. 
+                However, this program evolved and revolves around the Church and our love and 
+                respect for God. Our host congregations value the program as a remarkable vehicle 
+                for community outreach. SHIP is 100% volunteer. There are no paid staff.</p>
+            <h3>
+                Where are located?</h3>
+            <p>
+                SHIP operates under the umbrella of <a href="http://www.shelterforthehomeless.org">
+                American Family Housing</a> located at 15161 Jackson St. in Midway City, CA., 92655. 
+                The SHIP program rotates amongst churches in Los Alamitos, Huntington Beach, 
+                Fountain Valley, and Garden Grove.</p>
+            <h3>
+                Who do we serve?</h3>
+            <p>
+                The SHIP serves homeless individuals who are capable of obtaining permanent, 
+                full-time employment within 30-60 days. Guests must be substance-free for 
+                at least 30 days prior to admission into the SHIP. They must also be 
+                capable of completing daily job search requirements, attending weelky counseling 
+                sessions in goal setting, budgeting, and preparing regular budgets throughout 
+                the program and conform to mandatory curfews and other rules designed to ensure 
+                safety and cooperation aboard the SHIP. Guests share chores to maintain the 
+                facility. SHIP does not accept applicants with criminal records of violence, 
+                weapons, or abuse of minors.) This is a highly structured, 
+                &ldquo;tough love&rdquo; program that is not appropriate for all homeless 
+                individuals. Our goal is not to care for our guests, but to train them to 
+                care for themselves and to provide for them during a four-month transition period.</p>
+            <h3>
+                Our Experience....</h3>
+            <p>
+                SHIP first opened its doors on December 18, 1994. Through May 2013, SHIP had provided 
+                a total of over 32,000 nights of shelter and service to over 600 guests. Of these 
+                approximately 65% left the program with full-time (32 hours per week) permanent employment and savings to obtain housing.
+            </p>
+        </article>
+    </main>
     <footer></footer>
 </body>
 </html>
