fix broken link to American Family Housing

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <h3>
                 Where are located?</h3>
             <p>
-                SHIP operates under the umbrella of <a href="http://www.shelterforthehomeless.org">
+                SHIP operates under the umbrella of <a href="https://afhusa.org">
                 American Family Housing</a> located at 15161 Jackson St. in Midway City, CA., 92655. 
                 The SHIP program rotates amongst churches in Los Alamitos, Huntington Beach, 
                 Fountain Valley, and Garden Grove.</p>
