html: made each paragraph an article with numbered ids

--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="/styles/ship_styles.css">
 </head>
+
 <body>
     <header></header>
     <nav></nav>
     <main>
-        <article>
+        <article id="article-1">
             <h3>
                 What is SHIP?</h3>
             <p>
@@ -28,6 +29,8 @@
                 4-5 month period. Guests are held accountable for all of their time, spending, 
                 and actions. Guests are then transitioned into affordable housing. SHIP does 
                 not accept guests with disabilities. Guests must be employable.</p>
+        </article>
+        <article id="article-2">
             <h3>
                 Who are we?</h3>
             <p>
@@ -36,6 +39,8 @@
                 However, this program evolved and revolves around the Church and our love and 
                 respect for God. Our host congregations value the program as a remarkable vehicle 
                 for community outreach. SHIP is 100% volunteer. There are no paid staff.</p>
+        </article>
+        <article id="article-3">
             <h3>
                 Where are located?</h3>
             <p>
@@ -43,6 +48,8 @@
                 American Family Housing</a> located at 15161 Jackson St. in Midway City, CA., 92655. 
                 The SHIP program rotates amongst churches in Los Alamitos, Huntington Beach, 
                 Fountain Valley, and Garden Grove.</p>
+        </article>
+        <article id="article-4">
             <h3>
                 Who do we serve?</h3>
             <p>
@@ -58,6 +65,8 @@
                 &ldquo;tough love&rdquo; program that is not appropriate for all homeless 
                 individuals. Our goal is not to care for our guests, but to train them to 
                 care for themselves and to provide for them during a four-month transition period.</p>
+        </article>
+        <article id="article-5">
             <h3>
                 Our Experience....</h3>
             <p>
